--- a/pages/index.html
+++ b/pages/index.html
@@ -90,10 +90,10 @@
             Desenvolvido By: <a href="https://luciano-garcia.vercel.app/">Luciano Garcia</a>
         </h3>
 
-        <audio autoplay loop>
+        <!--<audio autoplay loop>
             <source src="../assets/sounds/X2Download.com - Boba Fett Theme _ EPIC VERSION (The Book of Boba Fett End Credits Soundtrack) (128 kbps).mp3" type="audio/ogg">
             <source src="../assets/sounds/X2Download.com - Boba Fett Theme _ EPIC VERSION (The Book of Boba Fett End Credits Soundtrack) (128 kbps).mp3" type="audio/mpeg">
-        </audio>
+        </audio>-->
     </footer>
 
     <script src="../src/js/script.js"></script>
