--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bungee&family=Russo+One&display=swap" rel="stylesheet">
 
-    <link rel="shortcut icon" href="../assets/img/bobafett.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/bobafett.png" type="image/x-icon">
     <title>O Livro de Boba Fett</title>
-    <link rel="stylesheet" href="../src/scss/style.css">
+    <link rel="stylesheet" href="src/scss/style.css">
 </head>
 <body>
     <header class="header">
@@ -90,10 +90,10 @@
             Desenvolvido By: <a href="https://luciano-garcia.vercel.app/">Luciano Garcia</a>
         </h3>
 
-        <!--<audio autoplay loop>
+        <audio autoplay loop>
             <source src="../assets/sounds/X2Download.com - Boba Fett Theme _ EPIC VERSION (The Book of Boba Fett End Credits Soundtrack) (128 kbps).mp3" type="audio/ogg">
             <source src="../assets/sounds/X2Download.com - Boba Fett Theme _ EPIC VERSION (The Book of Boba Fett End Credits Soundtrack) (128 kbps).mp3" type="audio/mpeg">
-        </audio>-->
+        </audio>
     </footer>
 
     <script src="../src/js/script.js"></script>
