--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		    </label>
 
             <ul id="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Faq</a></li>
-                <li><a href="#">Saiba mais</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="https://book-boba-fett.vercel.app/">Home</a></li>
+                <li><a href="https://pt.wikipedia.org/wiki/The_Book_of_Boba_Fett">Faq</a></li>
+                <li><a href="https://help.disneyplus.com/csp?id=csp_article_content&sys_kb_id=e2669dabdbfc08900a2af56e0f9619ce">Saiba mais</a></li>
+                <li><a href="https://help.disneyplus.com/csp">Contato</a></li>
                 <li><button class="assinatura" onclick="assista()">Assista agora</button></li>
             </ul>
         </nav>
